# pythia8-diy

./: CMakeLists.txt  CalcConfig.cpp  CalcConfig.hpp  GenericBlock.hpp  PtjTMSdefinitionHooks.h  README  Reduce.hpp  Serialisation.hpp  config.cpp  config.hpp  make.sh  make_all.sh  make_last.sh  myCMakeCommand.sh  myCMakeCommand_cori_knl_intel.sh  pythia8-diy.cpp  rivet-bootstrap-cori  rivet-bootstrap-theta
Docker/: Dockerfile
Docker/fixes/: .Dockerfile.swp  .merging_LO.cmd.swp  Dockerfile  Info.h  Merging.cc  MergingHooks.cc  NLOMerging.xml  PP_JetRates.cc  PP_JetRates.info  PP_JetRates.plot  Pythia.cc  SpaceShower.cc  TimeShower.cc  concatenate.py  main-unlops.cc  merging.cmd  merging_LO.cmd  ttbar.cmd
benchmark/haswell/: bs_1000  bs_nodes  mkPlot.py  mkPlotNodes.py
benchmark/knl/: .plot.py.swp  .ttbar_scaling_strong_shifter.dat.swp  bs_1000  bs_nodes_knl  bs_nodes_knl_c4  bs_ranks_knl_hdf5parallelintel  mkPlot.py  mkPlotParallel.py  mkPythiaTTbar.py  mkPythiaTTbarStrong.py  plot.py
include/: CalcConfig.hpp  GenericBlock.hpp  LHAMadgraphUser.h  PtjTMSdefinitionHooks.h  Reduce.hpp  Serialisation.hpp  Tools.hpp  config.hpp  opts.h
patch/: LHAHDF5.h  LHEH5.h
scripts/: myCMakeCommand_cori_knl_gnu.sh  myCMakeCommand_woof.sh
src/: CMakeLists.txt  CalcConfig.cpp  mg5_py8_diy.cpp  mg5_py8_diy_work.cpp  pythia8-diy-lhef.cpp  pythia8-diy-wcalib.cpp  pythia8-diy.cpp
test/: addDS.py  concatenate.py  getXS.py  testSample.py
tuningTest/: .params.ranges.swp  .runPythia.cmd.swp  params.ranges  runPythia.cmd
tuningTest/Ropes/: runPythiaStar.cmd
tuningTest/scan/: diy.yoda
tuningTest/scan/0000/: runPythia.cmd
tuningTest/scan/0001/: runPythia.cmd
tuningTest/scan/0002/: runPythia.cmd
tuningTest/scan/0003/: runPythia.cmd
tuningTest/scan/0004/: runPythia.cmd
tuningTest/scan/0005/: runPythia.cmd
tuningTest/scan/0006/: runPythia.cmd
tuningTest/scan/0007/: runPythia.cmd
tuningTest/scan/0008/: runPythia.cmd
tuningTest/scan/0009/: runPythia.cmd
tuningTest/scan/0010/: runPythia.cmd
tuningTest/scan/0011/: runPythia.cmd
tuningTest/scan/0012/: runPythia.cmd
tuningTest/scan/0013/: runPythia.cmd
tuningTest/scan/0014/: runPythia.cmd
tuningTest/scan/0015/: runPythia.cmd
tuningTest/scan/0016/: runPythia.cmd
tuningTest/scan/0017/: runPythia.cmd
tuningTest/scan/0018/: runPythia.cmd
tuningTest/scan/0019/: runPythia.cmd
tuningTest/scan/0020/: runPythia.cmd
tuningTest/scan/0021/: runPythia.cmd
tuningTest/scan/0022/: runPythia.cmd
tuningTest/scan/0023/: runPythia.cmd
tuningTest/scan/0024/: runPythia.cmd
tuningTest/scan/0025/: runPythia.cmd
tuningTest/scan/0026/: runPythia.cmd
tuningTest/scan/0027/: runPythia.cmd
tuningTest/scan/0028/: runPythia.cmd
tuningTest/scan/0029/: runPythia.cmd
tuningTest/scan/0030/: runPythia.cmd
tuningTest/scan/0031/: runPythia.cmd
tuningTest/scan/0032/: runPythia.cmd
tuningTest/scan/0033/: runPythia.cmd
tuningTest/scan/0034/: runPythia.cmd
tuningTest/scan/0035/: runPythia.cmd
tuningTest/scan/0036/: runPythia.cmd
tuningTest/scan/0037/: runPythia.cmd
tuningTest/scan/0038/: runPythia.cmd
tuningTest/scan/0039/: runPythia.cmd
tuningTest/scan/0040/: runPythia.cmd
tuningTest/scan/0041/: runPythia.cmd
tuningTest/scan/0042/: runPythia.cmd
tuningTest/scan/0043/: runPythia.cmd
tuningTest/scan/0044/: runPythia.cmd
tuningTest/scan/0045/: runPythia.cmd
tuningTest/scan/0046/: runPythia.cmd
tuningTest/scan/0047/: runPythia.cmd
tuningTest/scan/0049/: runPythia.cmd
tuningTest/scan/0050/: runPythia.cmd
tuningTest/scan/0051/: runPythia.cmd
tuningTest/scan/0052/: runPythia.cmd
tuningTest/scan/0053/: runPythia.cmd
tuningTest/scan/0054/: runPythia.cmd
tuningTest/scan/0055/: runPythia.cmd
tuningTest/scan/0056/: runPythia.cmd
tuningTest/scan/0057/: runPythia.cmd
tuningTest/scan/0058/: runPythia.cmd
tuningTest/scan/0059/: runPythia.cmd
tuningTest/scan/0060/: runPythia.cmd
tuningTest/scan/0061/: runPythia.cmd
tuningTest/scan/0062/: runPythia.cmd
tuningTest/scan/0063/: runPythia.cmd
tuningTest/scan/0064/: runPythia.cmd
tuningTest/scan/0065/: runPythia.cmd
tuningTest/scan/0066/: runPythia.cmd
tuningTest/scan/0067/: runPythia.cmd
tuningTest/scan/0068/: runPythia.cmd
tuningTest/scan/0069/: runPythia.cmd
tuningTest/scan/0070/: runPythia.cmd
tuningTest/scan/0071/: runPythia.cmd
tuningTest/scan/0072/: runPythia.cmd
tuningTest/scan/0073/: runPythia.cmd
tuningTest/scan/0074/: runPythia.cmd
tuningTest/scan/0075/: runPythia.cmd
tuningTest/scan/0076/: runPythia.cmd
tuningTest/scan/0077/: runPythia.cmd
tuningTest/scan/0078/: runPythia.cmd
tuningTest/scan/0079/: runPythia.cmd
tuningTest/scan/0080/: runPythia.cmd
tuningTest/scan/0081/: runPythia.cmd
tuningTest/scan/0082/: runPythia.cmd
tuningTest/scan/0083/: runPythia.cmd
tuningTest/scan/0084/: runPythia.cmd
tuningTest/scan/0086/: runPythia.cmd
tuningTest/scan/0087/: runPythia.cmd
tuningTest/scan/0089/: runPythia.cmd
tuningTest/scan/0090/: runPythia.cmd
tuningTest/scan/0091/: runPythia.cmd
tuningTest/scan/0092/: runPythia.cmd
tuningTest/scan/0093/: runPythia.cmd
tuningTest/scan/0094/: runPythia.cmd
tuningTest/scan/0095/: runPythia.cmd
tuningTest/scan/0096/: runPythia.cmd
tuningTest/scan/0097/: runPythia.cmd
tuningTest/scan/0098/: runPythia.cmd
tuningTest/scan/0099/: runPythia.cmd
tuningTest/scan2/0000/: runPythia.cmd
tuningTest/scan2/0001/: runPythia.cmd
tuningTest/scan2/0002/: runPythia.cmd
tuningTest/scan2/0003/: runPythia.cmd
tuningTest/scan2/0004/: runPythia.cmd
tuningTest/scan2/0005/: runPythia.cmd
tuningTest/scan2/0006/: runPythia.cmd
tuningTest/scan2/0007/: runPythia.cmd
tuningTest/scan2/0008/: runPythia.cmd
tuningTest/scan2/0009/: runPythia.cmd
tuningTest/scan2/0010/: runPythia.cmd
tuningTest/scan2/0011/: runPythia.cmd
tuningTest/scan2/0012/: runPythia.cmd
tuningTest/scan2/0013/: runPythia.cmd
tuningTest/scan2/0014/: runPythia.cmd
tuningTest/scan2/0015/: runPythia.cmd
withlheh5/: CMakeLists.txt  withlheh5.cpp
(+284 files in other folders)
